...
 */
object NavigationTestTags {

  const val BACK_BUTTON = "GoBackButton"

  // SCREENS
  const val MAP_SCREEN = "MapScreen"
  const val MAP_INSTANCE_SCREEN = "MapInstanceScreen"
  const val EVENT_SCREEN = "EventsScreen"
  const val CHAT_SCREEN = "ChatScreen"
  const val CHAT_INSTANCE_SCREEN = "ChatInstanceScreen"
  const val PROFILE_SCREEN = "ProfileScreen"
  const val OTHER_PROFILE_SCREEN = "OtherProfileScreen"
...
  const val SELECT_LOCATION_SCREEN = "SelectLocationScreen"
  const val MAP_CHANGE_LOCATION = "MapChangeLocation"

  // BOTTOM NAVIGATION MENU
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"
  const val CHAT_TAB = "ChatTab"
  const val EVENT_TAB = "EventsTab"
  const val MAP_TAB = "MapTab"
  const val PROFILE_TAB = "ProfileTab"
  const val COMMUNITY_TAB = "CommunityTab"

  /**
   * Returns the appropriate test tag for a given [Tab] in the bottom navigation menu. This allows
...
