...
          },
          label = "Back",
          testTag = testTag,
          onClick = onClick)

  /**
   * Represents the "Confirm" action tab. This tab displays a checkmark icon. Its appearance changes
   * based on the `enabled` state. It's typically used to finalize a user action or flow.
   *
   * @param onClick The lambda function to be executed when the confirm tab is clicked.
   * @param enabled A boolean indicating whether the confirm action is enabled. If false, the icon
   *   is dimmed.
   * @param testTag A unique string used to identify the tab in UI tests.
...

  class Generate(onClick: () -> Unit, enabled: Boolean) :
      FlowTab(
          icon = {
            Icon(
                imageVector = Icons.Default.AutoAwesome,
                contentDescription = "Generate",
                modifier = Modifier.size(Dimensions.IconSizeLarge),
                tint =
                    if (enabled) MaterialTheme.colorScheme.primary
                    else MaterialTheme.colorScheme.onSurface.copy(alpha = DISABLED_ICON_ALPHA))
          },
          label = "Generate",
...
